--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     font: 20px/2.2 system-ui;
     width: 100%;
-    background-image: url(img/mainbackground.jpg);
+    background-image: url(img/mainbackground-s.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
 }
