--- a/style-three.css
+++ b/style-three.css
@@ -56,12 +56,13 @@ p.bazar-descp{
     text-align: center;
     width: 100%;
     margin: 0 auto;
-    padding: 0 70px;
 }
 
 .baz-item{
-    width: 25%;
+    width: 15%;
     height: 500px;
+    justify-content: center;
+    margin: 0 50px;
 }
 
 .card {
@@ -125,6 +126,10 @@ h3.moto-name{
     line-height: 1.5;
 }
 
+.baz-button{
+    width: 300px;
+}
+
 
 .baz-btn{
     background-color: rgb(255, 137, 1);
@@ -150,6 +155,12 @@ h3.moto-name{
     padding: 10px 40px;
   }
 
+  a#gdpra {
+    font-size: 16px;
+}
+
+
+
 
 
 
@@ -157,3 +168,129 @@ h3.moto-name{
 /****BAZAR****/
 /****BAZAR****/
 /****BAZAR****/
+
+/****NEWS****/
+/****NEWS****/
+/****NEWS****/
+/****NEWS****/
+.news-card{
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
+    background-color: #f5f5f5;
+    filter: drop-shadow(0px 3px 30px rgb(199, 199, 199));
+    border: 0.5px solid #ffffff;
+    border-radius: 5px;
+    padding: 30px;
+    
+}
+
+.news-item{
+    width: 40%;
+}
+
+.news-descp{
+    text-align: start;
+    padding-left: 150px;
+}
+
+.news-item img{
+    filter: drop-shadow(0px 5px 10px rgb(88, 88, 88));
+}
+
+
+.news-btn{
+    background-color: rgb(255, 137, 1);
+    box-shadow: 2px 2px 7px 3px rgb(163, 163, 163, 0.5);
+    border-radius: 50px;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0 rgb(255, 137, 1).5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+    position: relative;
+    float: inline-end;
+    top: 20px;
+  }
+ 
+  .news-btn:hover{
+    border-radius: 0 50px;
+  }
+ 
+  a.news-btn{
+    color: #ffffff;
+    padding: 10px 40px;
+  }
+
+  .newest h1{
+      padding: 50px;
+  }
+
+  .sub-head h2{
+      text-align: center;
+      width: 80%;
+      margin: 0 auto;
+      font-size: 22px;
+      font-weight: normal;
+  }
+
+  .article{
+    width: 15%;
+    justify-content: center;
+    margin: 0 50px;
+  }
+
+  .imgBx p{
+      font-size: 14px;
+  } 
+
+.calendar-container{
+    background-image: url(img/cal-ban.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+    
+}
+
+.cal-card{
+    position: absolute;
+    top: 40%;
+    width: 80%;
+}
+
+.cal-card h2{
+    color: #ffffff;
+    font-size: 40px;
+}
+
+.cal-btn{
+    background-color: rgb(255, 137, 1);
+    box-shadow: 2px 2px 15px 3px rgba(68, 68, 68, 0.5);
+    border-radius: 50px;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0 rgb(255, 137, 1).5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+    position: relative;
+    float: inline-end;
+    top: 40px;
+  }
+ 
+  .cal-btn:hover{
+    border-radius: 0 50px;
+  }
+ 
+  a.cal-btn{
+    color: #ffffff;
+    padding: 30px 60px;
+    font-size: 25px;
+  }
