--- a/style-four.css
+++ b/style-four.css
@@ -30,19 +30,80 @@ p.main-descp{
 }
 
 
-/***MAIN***/
+/***TAB-NAV START***/
 
-.slide-nav{
-    width: 300px;
-    height: 450px;
-}
-
-.image-nav{
-    width: 2400px;
-    height: 450px;
+.tab-nav-container{
     position: relative;
-    transition: left 2s;
-    -webkit-transition: left 2s;
-    -moz-transition: left 2s;
-    -o-transition: left 2s;
+    width: 100%;
+    background-color: rgb(255, 255, 255, 0.1);
 }
+.tab{
+display:flex;
+flex-wrap: wrap;
+}
+
+.slick-itm{
+    margin: 0 auto;
+}
+
+.tablinks{
+    display: table-row;
+}
+
+
+
+button.tablinks {
+    width: 200px;
+    height: 180px;
+    justify-content: center;
+    background-color: #ffffff;
+    border: none;
+    min-width: fit-content;
+    transition: 0.5s ease-in-out;
+}
+
+
+button.tablinks:hover{
+    filter: drop-shadow(2px 2px 10px rgb(136, 136, 136));
+    width: 205px;
+    height: 185px;
+}
+
+button.tablinks img{
+    width: inherit;
+}
+
+
+
+
+
+.tabcontent{
+    display:inline-flex;
+    align-items: center;
+}
+.tabitem{
+width: 50%;
+margin: 0 auto;
+}
+
+.tabitem-text{
+    margin-left: 150px;
+}
+
+.tabitem-text p{
+    display: inline;
+    font-size: 15px;
+}
+
+table{
+    width: 100%;
+}
+
+.tab-label{
+    font-weight: bolder;
+}
+
+td{
+    font-size: 15px;
+}
+
