--- a/style-three.css
+++ b/style-three.css
@@ -95,8 +95,13 @@ p.bazar-descp{
     width: 100%;
 }
 
-h3.moto-name{
-    color:#414141;
+h3.moto-name {
+    color: #414141;
+    line-height: 1.6;
+    font-size: 18px;
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 10px;
 }
 
 .card .details {
