--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     font-size: 18px;
     width: 100%;
-    background-image: url(img/mainbackground-s.jpg);
+    background-image: url(img/mainbackground.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
 }
@@ -82,6 +82,7 @@ a{
       float: right;
       padding: 10px 0px 0 0;
       cursor: pointer;
+      font-size: 25px;
   }
   
   span:hover{
@@ -127,11 +128,24 @@ a{
         color:rgb(255, 137, 1);
       }
 
+      .toggle-btn{
+        width: 180px;
+        margin-right: 50px;
+        }
+
+        .toggle-btn img{
+          width: 20%;
+
+          }
+
     /***MAIN HEADLINE****/
 
     .main-headline{
-        margin-top: 15%;
+        margin-top: 5%;
         margin-left: 120px;
+        padding: 70px;
+  
+        
     }
 
     h1.headline{
@@ -140,7 +154,7 @@ a{
         line-height: 100px;
         text-shadow: 2px 2px 5px #818181;
         filter: drop-shadow(3px 3px 5px rgb(0,0,0) );
-        stroke:rgb(255, 255, 255);
+        margin-bottom: 20px;
       }
 
     .headline-btn{
@@ -193,7 +207,7 @@ a{
 
 .devider1{
     width: 100%;
-    height: 80px;
+    height: 40px;
 }
 
 
@@ -238,6 +252,10 @@ a{
  a.service-btn{
    color: #ffffff;
    padding: 10px 40px;
+ }
+
+ .services p{
+   padding: 30px 0;
  }
 
  .block-one{
@@ -373,20 +391,22 @@ h2.block-three-headline{
 }
 
 .personal-info{
-  padding-left: 150px;
+  padding-left: 130px;
+  padding-right: 50px;
 }
 
 p.label{
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bolder;
 }
 p.description{
-  font-size: 14px;
+  font-size: 18px;
 }
 
 h3.name{
   font-size: 60px;
   padding-top: 50px;
+  padding-bottom: 30px;
 }
 
 .person-item img{
