--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ p.label{
   font-size: 20px;
   font-weight: bolder;
   line-height: 1.8;
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 p.description{
