--- a/css/responsive-home.css
+++ b/css/responsive-home.css
@@ -2,7 +2,7 @@
 and (min-width: 320px) 
 and (max-width: 359px) { 
 body{
-    background-image: url(img/mainbg-smd.jpg);
+    background-image: url(../img/mainbg-smd.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -267,7 +267,7 @@ left: 30%;
 and (min-width: 360px) 
 and (max-width: 392px) { 
 body{
-    background-image: url(img/mainbg-smd.jpg);
+    background-image: url(../img/mainbg-smd.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -530,7 +530,7 @@ left: 30%;
 and (min-width: 393px) 
 and (max-width: 432px) { 
 body{
-    background-image: url(img/mainbg-smd.jpg);
+    background-image: url(../img/mainbg-smd.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -794,7 +794,7 @@ left: 30%;
 and (min-width: 433px) 
 and (max-width: 540px) { 
 body{
-    background-image: url(img/mainbg-smd.jpg);
+    background-image: url(../img/mainbg-smd.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -1047,7 +1047,7 @@ left: 30%;
 and (min-width: 541px) 
 and (max-width: 599px) { 
 body{
-    background-image: url(img/mainbg-smd.jpg);
+    background-image: url(../img/mainbg-smd.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -1301,7 +1301,7 @@ left: 30%;
 and (min-width: 600px) 
 and (max-width: 768px) { 
 body{
-    background-image: url(img/mainbg-med.jpg);
+    background-image: url(../img/mainbg-med.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -1561,7 +1561,7 @@ and (min-width: 769px)
 and (max-width: 834px) { 
 
   body{
-    background-image: url(img/mainbg-med.jpg);
+    background-image: url(../img/mainbg-med.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -1813,7 +1813,7 @@ left: 30%;
 and (min-width: 835px) 
 and (max-width: 992px) { 
   body{
-    background-image: url(img/mainbg-med.jpg);
+    background-image: url(../img/mainbg-med.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -2054,7 +2054,7 @@ left: 0%;
 and (min-width: 993px) 
 and (max-width: 1279px) { 
   body{
-    background-image: url(img/mainbg-med.jpg);
+    background-image: url(../img/mainbg-med.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
@@ -2295,7 +2295,7 @@ left: 0%;
 and (min-width: 1280px) 
 and (max-width: 1366px) {
 body{
-  background-image: url(img/mainbg-med2.jpg);
+  background-image: url(../img/mainbg-med2.jpg);
   width: 100%;
   background-size: contain;
 }
@@ -2374,7 +2374,7 @@ span.toggle-btn{
 and (min-width: 1367px) 
 and (max-width: 1440px) {
 body{
-  background-image: url(img/mainbg-med2.jpg);
+  background-image: url(../img/mainbg-med2.jpg);
   width: 100%;
   background-size: contain;
 }
