--- a/css/style-four.css
+++ b/css/style-four.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(img/banner-bg.svg);
+    background-image: url(../img/banner-bg.svg);
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
