--- a/css/style-three.css
+++ b/css/style-three.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(img/banner-bg.svg);
+    background-image: url(../img/banner-bg.svg);
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
@@ -252,7 +252,7 @@ h3.moto-name {
   } 
 
 .calendar-container{
-    background-image: url(img/cal-ban.jpg);
+background-image: url(../img/cal-ban.jpg);
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
