--- a/css/style-two.css
+++ b/css/style-two.css
@@ -1,5 +1,7 @@
 body{
-    background-image: url(img/banner-bg.svg);
+    background-image: url(../img/banner-bg.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
@@ -51,10 +53,7 @@ p.main-descp{
     
 }
 
-.service-select a:hover{
 
-
-}
 
 /****BLOCKONE****/
 
@@ -73,6 +72,7 @@ p.main-descp{
     display: flex;
     flex-wrap: wrap;
     margin-top: 100px;
+    justify-content: center;
 }
 
 .blockone-item{
