--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ p.label{
   font-size: 20px;
   font-weight: bolder;
   line-height: 1.8;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 p.description{
