--- a/style.css
+++ b/style.css
@@ -363,6 +363,10 @@ a{
 	}
 }
 
+.block-one h2{
+  line-height: 1.6;
+}
+
 .block-two{
   background-image: linear-gradient(60deg, #d3d3d3 50%, #ebebeb 50%);
 }
